parser/src/test/resources/corpus/valid/08_applies_one_class.ff
rule "One Class" {
  applies to: share class "Class A" of fund "Acme Master"
}
