parser/src/test/resources/corpus/invalid/14_applies_missing_to.ff
rule "Applies Missing To" {
  applies : fund "Acme"
}
